--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-index.
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+	<meta charset="utf-8"/>
+	<title>Pulsa, Atactiva y Divertida Forma de  expresar contenido</title>
+	<meta name="Home off my test frontend" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+	<!--Links static-->
+	<link rel="stylesheet" type="text/css" href="static\css\normalize.css">
+	<link rel="stylesheet" type="text/css" href="">
+</head>
+<body>
+
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<!-- Google Analytics -->
+<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	ga('create', 'UA-XXXXX-Y', 'auto');
+	ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
+</body>
+</html>
